# motion_estimation

./: CMakeLists.txt
cmake/: Dependencies.cmake
src/: CMakeLists.txt
src/Eigen/: Core
src/Eigen/src/OrderingMethods/: Amd.h  Eigen_Colamd.h
src/common/: CMakeLists.txt  boxes.cpp  boxes.hpp  io.cpp  io.hpp  lodepng.cpp  log.hpp  matrix.h  type.hpp  util.hpp
src/estimation/: a10.cpp  a10.h  basicImageManipulation.h  filtering.h
src/examples/: CMakeLists.txt  test_a10_main.cpp
